restarted kernel and ran all cells

--- a/Interactive Visual Analytics with Folium lab.ipynb
+++ b/Interactive Visual Analytics with Folium lab.ipynb
@@ -7086,7 +7086,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "After you plot distance lines to the proximities, you can answer the following questions easily:\n",
     "- Are launch sites in close proximity to railways?\n",
