--- a/Hands-on Lab: Complete EDA with SQL.ipynb
+++ b/Hands-on Lab: Complete EDA with SQL.ipynb
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -905,6 +905,10 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
+       "            <td>No attempt</td>\n",
+       "            <td>10</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
        "            <td>Success (ground pad)</td>\n",
        "            <td>5</td>\n",
        "        </tr>\n",
@@ -912,14 +916,41 @@
        "            <td>Success (drone ship)</td>\n",
        "            <td>5</td>\n",
        "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Controlled (ocean)</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Uncontrolled (ocean)</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Precluded (drone ship)</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Failure (parachute)</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('Success (ground pad)', 5), ('Success (drone ship)', 5)]"
+       "[('No attempt', 10),\n",
+       " ('Success (ground pad)', 5),\n",
+       " ('Success (drone ship)', 5),\n",
+       " ('Failure (drone ship)', 5),\n",
+       " ('Controlled (ocean)', 3),\n",
+       " ('Uncontrolled (ocean)', 2),\n",
+       " ('Precluded (drone ship)', 1),\n",
+       " ('Failure (parachute)', 1)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,8 +959,7 @@
     "%%sql\n",
     "SELECT LANDING_OUTCOME,COUNT(LANDING_OUTCOME) AS COUNT FROM SPACEXTBL\n",
     "WHERE (substr(DATE,7)||substr(DATE,4,2)||substr(DATE,1,2) \n",
-    "      BETWEEN '20100604' AND '20170320') AND\n",
-    "(LANDING_OUTCOME LIKE 'Success%')\n",
+    "      BETWEEN '20100604' AND '20170320')\n",
     "GROUP BY LANDING_OUTCOME\n",
     "ORDER BY COUNT DESC"
    ]
